Fix 'Backup can't be performed on Windows'

Avoid the need of a 3rdparty tool to support file backup
on windows by using build in copy command.

BUG:302945
FIXED-IN:4.8.1